--- a/ansible/inventory/kube/host_vars/k3s-0.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-0.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:NQuwyOfL,iv:JXKvb0IN+qbGa2zgktX9OLIIWyPD7eRM/VIRYnHMfqY=,tag:lFRXvlg5GHKi30dTRut1aQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:V7ofWiML,iv:6sJrfVIy+xfhLmyH8ncIA3Gr0DaM1DT0CAYHqOVOPdo=,tag:lE90gwOExWlLb83ZGOJCuA==,type:str]
+kind: ENC[AES256_GCM,data:WefLTEN+,iv:GqoS1MlcGxU/siSSGNRJ1V+22NHQqb5OxAYPPFB9Hhs=,tag:oelqG7wpj58Mbiozc2XwOw==,type:str]
+ansible_user: ENC[AES256_GCM,data:3uKMEXGt,iv:61L3n5LtO6ZnAUNVFXGUGD3hZh8JKdZpQkhCBE2iYvo=,tag:+wehxz5zOMhz+iQ2fBb2vQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuWTZxeGVKWGxoamIzZVZX
-            aDA2NFUzeXJrcDdZS1pFMFVHQlRSVHFtSTFVCjRmd1RGOUl1SnhCRk5OTTI5MjNN
-            NkJKM3B6cWR1VTRGR0g5MTJKOFo0SzQKLS0tICtZUnE1YUpzNWxET1BNVk9XR1Nt
-            cEM4TklDcU5yU2xGWS9STXBPWkQwbzAK9RPuZi/c+Cm9fyxldz4JiLBMj6dk2noJ
-            YCIWDRLWR8cYNnOgc+aE6LQZMnz/jhe1y4TYkbtIZ8qHM0A+zJ8/QQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIaVlCd0todTREWDcvSW5W
+            UFh6L1FuMzBLdHdYeEhLdkhKZ0FGMDJTOHpVClkwTXlad2xVMC9KSjNIaVhYeFFj
+            WmFrc2k4WDN6aE9oYk9PSUxNKzhSSWMKLS0tIGpTR3JCeEV1bnlsb21DRUpvZ1Y4
+            THdBSGgwdEpFMWhtaXE3RTlCTjNOZnMKxh/KowQrEotDG3Obzn+dUe9P1mj3fCs4
+            K7mvoNHQFxnDDVddXMUVA4gzJ1NMHJfRePrwU1ikdQX2iheiRaH2Pg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-05T23:23:29Z"
-    mac: ENC[AES256_GCM,data:TNVN4RqB7xh21zagB9K2yFr4NqFvE//Zn+TBG7VuZil0RVDcurDae89F/IM0s0AWHhNxzUrsJ+eVfX4TcmBNRU+M1ZGf8WsQxLkd/DjwM+XMKDBh40LndP5+qh7XbWoI8JM7ak7tJl4Rl+rIaOxpWti4juN+ijsPYwiMdTB+XYI=,iv:bDCWpCfmurPWn8kpjvHyLIsorR0CjgCkA704Tqic8Es=,tag:cZHdUQFpTvtu8/sFpmCAGg==,type:str]
+    lastmodified: "2023-01-08T00:52:50Z"
+    mac: ENC[AES256_GCM,data:HlpxmzXvtdlqgofYqSLAzhtGvlIxMlOfSbGtEQXMQm7t6s5qkVxpQ42nH6QCJJ06ozC8FnzCiaC6QPxlKdt7HELJFciuMwqLLoNbaKGwMdUPfoy/xLRGRJT0Fcb+MAhZedCME/mZC4QQIKbVQ3nkTcwT31cNUfK9J3Gyz8DjmYI=,iv:EjzAleW8i+PIa18+TmaYpkziFjYaScbK+BSTmgS5BkY=,tag:OU60ZOvU2RivYvOv9CpPig==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
