--- a/ansible/inventory/kube/host_vars/k3s-2.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-2.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:mbqMIQws,iv:FTuQin1KH6NyFmvqUA/0ChZbgiM5tsXZUJoltriZmVc=,tag:cLUfqigRV0Zum6dsC9HVIQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:B/9ux/qk,iv:jkUloVVHxxVHCk85BA5xgm1Ybe/ZUE7FPDap72fGKs4=,tag:+HCe4359LoMuvFJ52wbghA==,type:str]
+kind: ENC[AES256_GCM,data:DAgDnW3S,iv:ipERh51CS3z/JejV2YBFzWcBkXTCPoob6Ih0+q8sD9E=,tag:AcVH9kZezJ5udCI3/qibvQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:eurhyLZL,iv:LT5K5ZtPT/2QzItMWeb2e3gNA02p0uveUqV0xzp8N3c=,tag:B6Xdw5Id1tLJfqcpsvIGmA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnQXA5T3VOd0crQnV2bzBa
-            L3pZMHlpOHZiWUNHNTFsdUt5VjZiamhYYkVrClJEMVpIeXdoS0JvSkc1YW1hNm9O
-            UGVDdDE5YTNZTjh2QjlndXhmOE9RWkkKLS0tIFA2NmFDdzRycVZ4WGxkN3VmM0Uz
-            NEVHanRSQnlwWHNDYUFFZ1lNQ2ZqYkkKwKtAL6HWp2q7Rgpvhfel7tT+bZF17jXQ
-            Wx9HqKf4cyHBjNVLvC/Gw5s+z5xtH7T6cNXmWlOi5E/1BJwjBl/evQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzd1lpcUZGZkRWUUZWY284
+            aHBHdkxTc0hzVGtZMkg3L1hRZm9YR0grWFZRClgzSnhqUDFqR0JTNFBaakF1OG91
+            KzJ5VWdJWmxkbkJLUVdqS2xiQlUxMUUKLS0tIEIrcDZlai9VWGtzaDRDQVpBeXRU
+            UGQyd3VIcmNWODhQTTBQWEZQaXZLKzQKUpMgfODQ6USYXeFj9Zlj29AIpqpSmQss
+            mGccD5M5q6S3HPhHvdW2X/hr73ElnbDFBb/fY2WGtptvKXXjfaXijQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-05T23:23:29Z"
-    mac: ENC[AES256_GCM,data:APVKPdeM6UdD0rqRIIIRyLYaxGDMu6WDLueWWRJj7lHOUz2frUiwPNIkhzR1PEnYUqQ8ugUQvt/dhjB/zgqBaGDplmjtlBc+Dz20TGN4r7vav3UtPU1jTljQ+YFJ03QB2pdK+iVeeQBW5ESA3YgrGDW14L6QahTqabz0YZK5NGQ=,iv:e4pv2EJItyMxVg6YDN/6tiHTcblV0k5XKX3Li1xzj8Y=,tag:6r4IeAC3fC8xi5obR3P2pQ==,type:str]
+    lastmodified: "2023-01-08T00:52:50Z"
+    mac: ENC[AES256_GCM,data:DEx4dkYHgsp7whhSEG01DFl1fDoFHl4T1+yAhswVBU8MT9EAt6ZVtgBvO3PTtQQY9/bAPLS+2lyARUWmDUA8E1EcS2t/MSQAKJmN6O4mxzEjg2zja8hUUNOAI7QHbVd2mvxgPPIUm66sii/LMINQ7Dj5xvBvLibhZ0WFJ1wOqwU=,iv:/7QdCYzfBTNsJcyuah2zlEy0o06/hPudT5X1/+4OoHY=,tag:S8heFlTkJpXRU3MGV/wanw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
