--- a/ansible/inventory/kube/host_vars/k3s-3.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-3.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:CCqJKurc,iv:GIc97TZk1t61Mkgg/u9gOF7aj20AxhZYHV3LCIdFbXU=,tag:RWR7jg0hb28SW0bMY3Gsng==,type:str]
-ansible_user: ENC[AES256_GCM,data:TtlJoW7P,iv:btdYIbCkwedUDvWMlPNb0nHsLCtTliPZp7Zcg0j7YAk=,tag:qM03/Bkn5BRZbNlPpx53aQ==,type:str]
+kind: ENC[AES256_GCM,data:E+TCCoGA,iv:Qe8lBL0qOa9WaEsolXzC2JbTUvI90JwpdDAx4gza2BE=,tag:sF9WOKwPZPTjui/+1HJx4Q==,type:str]
+ansible_user: ENC[AES256_GCM,data:QbHfkaP2,iv:TJS5Yrs6K757Ip1bQ8KTrVcGBskgrfHAG4BSNM+WFrc=,tag:b8lr9a32cbvr/w3AVvkcDA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhS1NCWWkwK3E3d1Z3ZlMw
-            OHh3VEVpYy9KT05BcXBaT3JkcjhEUXg2UzFvClA2QVFwVmVvWUw4V2IrTHVzUlhr
-            a2l3alhwRS9EYTdVQTZzVThHZG5aOUUKLS0tIGRBR1RLN3dGRnNyYUUyZnJpMjNP
-            UWxFbm1MckxkNy9Yc0xvREtHQ3FDUlkKj+c+yWYO6g8YdLVYcgF0DyjXa/kj4yHm
-            ojj2UkhEcgW406EQe5FanZcnIJd5Ez5aRQIU/H9vBzE+1I2gLrP4OA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpVEhnb0x6ZWE5V3FsUDFa
+            UmZ4UTYvTFdLdURKU2F3STVrN1c3b3hyWENjCnV3aUVLUWw1Z205Sk9QZXhQRjVw
+            endtbjAwQXpqY21iSjlwZTZOZ2lBb00KLS0tIDZsc0RGZG84UkJRbTF5cExPbmxS
+            MitkRldqNzlFTWpuMUsvdHNCMEY1c00KJo04QstRRL7rgkUr/JUgnKz8PEpTosDg
+            zb34LBTHBq68KvcMp7yeD5b3ugARChF7KOiW/rSAOp9CA9JYOMc2ZA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-05T23:23:29Z"
-    mac: ENC[AES256_GCM,data:AhrK+z4I533Rn4nxmWR4iXPPrEIWIJj7903VazHiYfDP4r22vj1Tf/Y27E7ool5s1SOvUh9oxZ9cmSFcsoIC5B/ZgpSC8sPEI/Y1H64iP2Yv//mQ1kiV2QS5K74CG4tj7vXjooiF/OWsIRL9j+bp3M0BpoTDx8QrNsqYr0xr7GI=,iv:w4WHCvKJPrTGUX6iL2Hwnvjg8lZi+kYPQUi+ghvuESs=,tag:xBANrlyT5VKWfkY6tlz6tQ==,type:str]
+    lastmodified: "2023-01-08T00:52:50Z"
+    mac: ENC[AES256_GCM,data:7XflSRTB+OnUMhv2D83DFwi6iHd/BUIsi/o5/0xitB45Izw/Ke4oCGO6Jll+Sj/jipj5OO2hwwsFltmK8XnkuLFijVHfe5YiJ79lybzadDTHTwOpTIVAu1qeUkrhauEKbJ4jMHu3Br95mxbgsbsydL6WNZSa/GmCHznBGzLpSUs=,iv:CTDQV6788Yl23dEA+hXPmDVjy/9F+JAfjvOzLnbS0Rg=,tag:9jSNela80oK1F5gRA2+wnw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
