--- a/ansible/inventory/kube/host_vars/k3s-4.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-4.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:9RYJiJva,iv:/OTO7fe5mROs/1j5VZXHEs7KamrtVfaXQI4fBWKCpkw=,tag:9q2DSSojeyueftn+aTEgJg==,type:str]
-ansible_user: ENC[AES256_GCM,data:g5Blb+Z8,iv:rajBdU+05yv45pb3xe46F8N7X2JRkA2cWO6qbcGiNe4=,tag:WqBxG1kXrwfaAjvKfvmOJQ==,type:str]
+kind: ENC[AES256_GCM,data:0yCmvfKC,iv:T3pXRWGRYV/OCGqevVjrv+B+dX63msSrCxPN2djqgCU=,tag:mhQ1IsU1hcsT89tNKZv1FQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:5eYVsdJv,iv:onTpRQMf498l8NBtkUQJQUbyC4kO4XSnLJ+wNMRo2kw=,tag:m1q3O1CZNAcH/mOwqcg8XQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLSHdhUmsrb2tZYklsZ2JZ
-            UnB2c0RaSlhyMFc0anZFVGxXMm1FaEFFRldJCjZ5aE5VMDNhbDdIZUc3OUtxRkRN
-            MlBoS0xyWXQ1ZGw2VGJpN09yRXlBYW8KLS0tICtUbDdGSTRkdmVpbUxqamx5aGVI
-            cmxFL3ZWZkoxbU9TVFRBLy90UDNyUW8KnBGl1rreZSy6abyKLL4BnvsfBwuTTJ+/
-            e2EDXhExFTI9gGyRTgyhJ4Cd1At752Ta4m1VI0NhmCP+3RBgzHjS0w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRUHZqNWpac0RsTUtRNjQv
+            ZWR5YlVIZzBCOG9sditQcUh6Tmx5V2dmZFNVCnYvZ0htd3NmTXE5dHhKS0JKMzBh
+            UUl5WU43Ryt2em9ETlZGeFZjVXhXZzQKLS0tIE1DVGFlVDltVUx2T1gxbEVWZ3dR
+            K3BoZnIzQ2E3RG93S09kMHozRjMrVFUKrLY35fb+Bf2Pt4WPblnb6e9hyoFNMuLH
+            r2cHYlwW5IxqJyWbTknsPBOrqDsfYaBriUILizbK15fmJeVF9x3jTg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-05T23:23:29Z"
-    mac: ENC[AES256_GCM,data:TeOfUKj2xde2294i8PZ4vOhRIV3qrajwND6uleiOGk7XDL+CilZQdkCd2qgCvOtxhrbUK41FHPnY6gyeewfdjYv06u0hFE4D/k574fgoCcWR2HUra9K4LF750qeg1OBQvVcUX0XI537KOijj2qlxw5yllfkhc8j/DY+Dw5Ilc9w=,iv:GzcrwrpyAsS9zFqsQAklV8hUUT5Vo/gAzMM5izy7SZA=,tag:NdC/TMjrTbJe8dKEXNYqeQ==,type:str]
+    lastmodified: "2023-01-08T00:52:50Z"
+    mac: ENC[AES256_GCM,data:rMxAxLBiR60HmKu9b+ZOqVPLEabwUZNo6ubFD6Kt23Vrz0Y/woMmsAhHbN5GY//HnZfULgYchMSeAAE7hQvezkGaIDWF4bd8maovQg/kyIwhOnEhdtkSehXbeDq6tpR+idJ2zcD6O0tb9YSy5q1WnZRQIss4kYA0QPs/XtUQOgQ=,iv:swaJjMZieYSWdBwvxsGrodhqnDIhhZSd4PI0/hjXF9c=,tag:VK/b0Hp918jJS+abH4GJEw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
