--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:Y1tlMG6KtZL+cmrp0JXphHoujYbe,iv:T4IHSbZtOJryuoBjcT+tzN9MIWGwE8MRxTUO50nHdgQ=,tag:lI0S8JOvxVFoOK8IWqccVw==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:sY1yAatME2wc8mTEqh0zxrhZdE1uYiBHEcQNYQU5iQ9aM1RfWg==,iv:AJsOG40M1sSUUKd9PyP2TjW9HuNIA8VLoYczsp1CgZo=,tag:xzlSXm4Ve9EjLiR+SyQwJg==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:kDJY3EAAataT0BY=,iv:k91AGfv7mo7fWwA3+XUiKhj+0C4gXqJwGNwLEREyxVM=,tag:6b6NKoEpj634EXMl+lfIHA==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:lO1LmXcBTc5/Mu002cTNkZT1cok3,iv:GhB0nAjtu7cce3vzr3APSxL4YAP6rVASKylVT66aEuk=,tag:3xVzGvzzzIbzeyjbGyEASg==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:bFjLwV7RQWKLMPdRFSDmzeQtp1f+Hh1dMafo5YKN4Xh05PfbnA==,iv:OvklnMWrQHNUqrxniG3eoYK6gkMJFSgXkHpeu4hhJ9k=,tag:mDCDT0aqrpmce20N9RvVEg==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:588zCkUxf85UO1g=,iv:10uFxWCxkpadeonJ99co9fv1P2ISbMdaCAxRF70wLKI=,tag:tusREYQNko1oq0Ttoc9Qww==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBweVlNRFFWa2wwdlF6RGVk
-            dnY5ckVKQVNCK2NQWkt5ZGJZTUFYS2ZxbW5FCldWZlo5VzFhMngrMUJkcGhnNmZK
-            Z203R2EzRGhlbTNOTExOdjcwdCtGRmMKLS0tIGlIV1huMllhTDAyWWFPSXI0Tk53
-            cHMydXhIYXNRcGxoRTdKN3lWem84T28K/nkRXDGWV74XdLnX2oAOx+k3+AbMCz1l
-            PcZHk59EWP1gR3zqQPHAZGJY9vB8x08Y7IVEpDr/9KvbU26AbNTLrg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJT3NMQ3BXNjRneSs0ZUtI
+            OW5qMUVMNmhMN2o1cnIxVWZtdHM4b1Y2ZWpZCi9XS2l6emZBUDlqWlpWc0lNRzFW
+            MUZKcjUvRWVTWmQydnR4dWJaQVl1NFkKLS0tIGJyRjZRRko0YXhKck9ON25OUnd3
+            clZrN1hvRHJJNEJna2l1YS9icmRHRTgKSSyJoqTsnG0jqo+VIFvf677E9PXyokEI
+            H5ZvLTKzq9unOK4fjQBzw2nnDAU/KFO6RZ3oq3+mDaVzzCu8urH1AQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-05T23:23:28Z"
-    mac: ENC[AES256_GCM,data:DpZxScceYhES+1jchYYp7T4tG8S6IyOhEnuegfQqaNWIw/TBYLGmdfORvpwroAmwNjfTwWWF5y7mBBgy1y+lP/dU7IquzCmsT1LP09OCPAR4cYjlYUzf+Bx1g8nedvnxbVYE5AiJvT8uV6ebUMd/aqXywvKo6nFfjCaHEYGWqW8=,iv:4JJT9HgfZXv103I7Dz1KLLMau66Knqe31sRYsyikM4s=,tag:CgbqcNn8eIzVcz/E8alAVg==,type:str]
+    lastmodified: "2023-01-08T00:52:50Z"
+    mac: ENC[AES256_GCM,data:iiQQ9XBM26dnDMyDvBdxIIrIIvhROWPo23zDEMgesbxlO54aYRGX1uw+fnnc69d7ewlqFhpCGwe3/XHLOc16T/ahJoEtYTcyyP4bXKbCVejX+A0ZIZagoJPs6z+94PErWI/f3G5b9TNuCO1PhGAD3sKwbsznJTvOIcoTJ/sn9HM=,iv:jQpgCw8ztop3d1Gw934laZrgJcoPPzQuIxCTAFAzJB0=,tag:KJ5ZNaHIzmY59l9I35ZFFA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
