--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,15 +4,18 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:LJ9N8bau8Z7HHys=,iv:heqU20AQdrUh9XHGRok0tQOfKBnHB9pxXazF+20NseI=,tag:bFcyWmVhczDmTp/nvJhcrQ==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:m/g8xBetwTRp4KQHmxFnoUltusmP,iv:5WIH8FeNReLS5/Ux+pASxO1qH/9pi6QgTlWB4kWWmwU=,tag:FiADX2/7WMdrCO/KQrqnOQ==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:ax4p2whUsb6WupkO4FapApUSgPI+EmpgS5nSKik08zbjJd1El6yxCDvis91UyuN0803KfwG07Hgi3y/WAcRk38KKdYWHhSE=,iv:kM+Hw6PTDjCnbj6OhjYqi444VhGK8+Rn5byncNc/pWk=,tag:PbrC0+v+BMMwP1CapsK7gQ==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:t1IEG/AUOulywyYjgmtEAJ5SngzdHXBevt7NCLP4SLlpE/Q=,iv:ZMkt2myCJeINo+NdP8OZ422GLA4YHwoRRuOY2Fkka3k=,tag:lpTL1A7bGOshEjvEJmiGyQ==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:3pi7/hwMr4khYAS0V3nhJfPenw==,iv:uQX2zunW7D9/2H2dpAkRYo9+VwBHLVEk5LyB7UeTb3I=,tag:mSUZkBxGSa0inpOEu3z/eA==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:Evf7JqcrCy5d5tGkjaT2yodxCVNO,iv:HpvDAxILzTCQSXIkkrTjgsxBJHHDtolj5MlJam5L6+Q=,tag:hhNqDeU5Q5UDMxpkRRb12w==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:spo/vCJ0PSs=,iv:zWx2vl1FNSBD06Tx7fVNG7dpsLvC8+dnhyxoIvKvmIc=,tag:L+trhNlrJGS7yQvajQSsJg==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:a7/GpdrnEoI=,iv:xCHTC1Mw51yhiUhPaqzQ51qHqEO1w9iR8V2CLDD3njM=,tag:ul7yr9i7/VWMk7/BXVBK7Q==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:hhn+DdcnrgQJsnRGz5fXqAdCAS2lPduOdGy91WBnQtDjMNKX2En8zacSw0cPlb44TM1JZIxVWcKjb0JBNvYRwg==,iv:KlNksI10qdPbcLRDkrVwgiTm30NzAN8Ooqwod1TRRcs=,tag:j5d+CR9huiks0A6dpz6ZSg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:tOtHjcryY+7G52U=,iv:0HYPIawDfZ479m5E1w1CZLabmGJLOqchlVMLJnh85CY=,tag:2q1WuqZPLTdvPvThOLR5fw==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:1zTrTfTqrJgKbwvni2AzpY/ckrMU,iv:qTpK81sbM0u7XdW0cgpUQgXSv5ioBmf7CjsKxz7uUfk=,tag:PXBf0wSYfmZjOg4Qr6+cBw==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:UlXsHg24A0gUnOt6JrIEKCxdLumdXfHJDOP+oTCxJDmVElNT7skOC6uOO7ipWj0uGI+aJIPRLBbkqqeqLCXcPNPr8tmP7Mo=,iv:4G6iiBBEE+MRJqzq4Uc/ouhVbqheZxA7zd+WO+bHd9A=,tag:G+2kyy4apHKkuxe2fUBeWw==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:Uxzh3X9443BjdQz/b3vT2h39j9zFTJEeJbc17ekRiIo6/Jc=,iv:hBxSeMORg+fMNk+FrfjlDW4GRW+BJONfy4gAb94Zn60=,tag:wCCXA2QRvM0ev/us09R+hA==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:wP5J7UXLFY76/5Gd1UcqAvIHxA==,iv:Xd9Gm7AvLKUBIIcJOQsCfSTci+4d3QA+TOD+6z6S8VE=,tag:VAEnSQKc+BOi7oWSDeKzYw==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:2bf8fCAV9LGNqQOtzd6nENX6DMLe,iv:ECnwDONiZ/A1HdFWfXIu9TXkLRe/vQtUG36ies2aU4Q=,tag:Ew3Pm4rLvwKrldgFql/Lpw==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:+9QIZQYJnqs=,iv:u+6KRE4Zwn9i8KNoI4D8o8eAt2xXOAGCE+CGF1qBkJE=,tag:fMxWrldwhdNh/UDWOcYFJw==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:i1Tle38XNVI=,iv:5ATAsIv2l8yKh2+zAg0GB1Slb39gjM80XCrkuZMJ9nc=,tag:3C014YYmfRkyjYqg16kGcA==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:e8eJoksUM0rxQFuxId8hHn/7DEIxOYOZLMzbw7pGnSG+IHHMqCoqF17pswikj5ZL/I7QIUmgc0Pnvh3LXosxGw==,iv:i6gFqACnxMCf05VDZlZfyFy8BM+diXMqvsNxO2syHt4=,tag:cCaPOUCXWBmxEg+jwbYSdg==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:fDPfWXsQBd0pPryPEixUCG5OL2fgdGWcw1m7uRpCHVfYGJRifcodFEeKx7V2Gon4TYquSpaeLZhmulynTX2TnQ==,iv:o9+4ty2BuTnd52NiZGzZrllgD41/W/qTXFDu52fHfSQ=,tag:dM6fSm1j33a8lR+aRdJtIw==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:QuUgcMG+khFW,iv:wNJ1U93aPeme4x2hm+5LbXqX3/5byWWT8czvFdRPUvw=,tag:RMC6jfa85l6vpXoJKAJM8g==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ""
 sops:
     kms: []
     gcp_kms: []
@@ -22,14 +25,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5cDVyWDNLUkFlOHhPY3NT
-            MEtpclUvYmx5RU9VYnhrLzFwRTdSWTdzazJFClJlU1pKQk02OUpLNVFJTWxOeUxu
-            SFdrVkdHSXo2VXAvRFZ4T0F0Q2tpeXcKLS0tIG5YR3U5QzVoRFNEZlBOQUlPZ1Ja
-            a2I2QllnU1YrQUtiTkNLbnlTc0hFMlEKilmUI9v4JGdBczezU7/FB7gESbxDetKZ
-            YAvFBDgkrXJ+jrNcQGlzAeHvLNszEbi06upx1hCjYbvk2DZPeWP6sg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrNE8ycXM3aGY4SHpMc0Nv
+            ZTkyYXhRSng1aWtjakYvMWtEaHFzOTNYd2tFCnBrSnJxeFNGWHF4Z0pWTEsvZFJk
+            MTdraHYvWVdaMnEzcGUyQk84Q21sODQKLS0tIERnZlFxWVZ6TVV6VkdOK1lBWE42
+            V2tDUlNoOC9xcTZhR2tyQkF1U3JLQ2cK0YF19hDJxUVB9sjrfmW9mo0RJ3uCXbFw
+            nvBx4jO5Ll01pVmGh5ZGQnsn527wsxYmPRxJEM8OTK/x8nRrAEUGYQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-05T23:23:28Z"
-    mac: ENC[AES256_GCM,data:93KupI3R8k1UxD6xy8eVBYHkN6lu72I1XLbW6wXPFXJwjqDSmosLnwkBU/Iex3FowGGV0tPubgVZGydLQ/dZl0IvilMFMPg1BQfmZC4pe5c+3Mld41b0qrU5jQmMcrbWD6VqU0tNyf/i2teQb31vR0Fx5mV7PPv7B2XemkU7Mf4=,iv:BiaF+xJaHtE4Q81XBrz5xaDpT0gyA6MEUKc5xtV/Yvg=,tag:UP4SPzIzy34CJ7fe8EXD+w==,type:str]
+    lastmodified: "2023-01-08T00:52:50Z"
+    mac: ENC[AES256_GCM,data:NN03y8ew2yvMzpunFcsdELsz7mjSpuufDyNaaEuK+6P6S9aS9ccB8oMiNZaCrlRb5sYOajmIQY0R74oL8YR4mt3f3xct5WY5OpczLRiG6R0oVLBWCFfhVBmGv43aoQ6gVSJrmyV1sk4yiKZNy2vFQYJXVIqixcZbAjWSWK3/r5Y=,iv:4vAUTsbyQPHq/f5lHNo8jp5f3Lo49Mz8gCNyqiZYEtQ=,tag:RTgo++hRr2cj/IbocLNNQw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
