--- a/tmpl/kubernetes/cluster-secrets.sops.yaml
+++ b/tmpl/kubernetes/cluster-secrets.sops.yaml
@@ -14,3 +14,6 @@ stringData:
   SECRET_AUTHELIA_DISPLAY_NAME: "${BOOTSTRAP_AUTHELIA_DISPLAY_NAME}"
   SECRET_AUTHELIA_PASSWORD: "${BOOTSTRAP_AUTHELIA_PASSWORD}"
   SECRET_AUTHELIA_JWT: "${BOOTSTRAP_AUTHELIA_JWT}"
+  SECRET_LLDAP_JWT: "${BOOTSTRAP_LLDAP_JWT}"
+  SECRET_LLDAP_LDAP_USER_PASS: "${BOOTSTRAP_LLDAP_LDAP_USER_PASS}"
+  SECRET_LLDAP_LDAP_BASE_DN: "${BOOTSTRAP_LLDAP_LDAP_BASE_DN}"
