--- a/ansible/inventory/kube/host_vars/k3s-1.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-1.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:EE51X3TH,iv:iXgVkqV3aYqM0hFWsyWLAiqD/B1gghX7x4BmmanXcUQ=,tag:tlvAwPCL/znUPZNAbbxWAw==,type:str]
-ansible_user: ENC[AES256_GCM,data:oGwCUptU,iv:IiZJNVafoSjTguKc9pBDlqQqZ2A6lJq6U/K34RzzSxA=,tag:KxF20h7Duvgx6/drXPrDHQ==,type:str]
+kind: ENC[AES256_GCM,data:qFKjpjJ/,iv:OLjiEWoX+X6+dx6uHySXaaK7q11WzKKpFHB+8fnNDr4=,tag:BCQ5ae+I7uSJINc0EN2G2g==,type:str]
+ansible_user: ENC[AES256_GCM,data:jU/GFPmP,iv:W8fapa3aM7DdCT5DlYQfLFb9BgS6Xz5v7cvzikDa/BY=,tag:SIQ8p1v7bvVIaLjUk+S/+A==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1cDFlZ1NWbmVnYVVtZjdl
-            UituTkhzbHF3NGd3TldzNVpCb3B6YlRCTlJNCnZub2tVWEkvTW1aZElFdHRPemQw
-            Ulc3OUpqTGprdk5EUDNwd0FQTERMVHMKLS0tIG9TeXFKelc4ZnJqSHYxT01TVUNY
-            S3RrZElJc210aEQ0TTFtdExTYStXNncKJeWjWOlEs2S2/5zVZUoW3xIfl1DLEGDl
-            8ZDVA8RXozhAzExpn1lgKZXrhP/11rakuCtg6bynUpchYIiB6Omiiw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXRE5XUXdPTWFPMU1oK1hV
+            dS95ODk5TGhkcVBTVG9POTFCL2U3RHRxTDBnClhSZ0ExOEd1MXBrZVdpc1N3ZlBU
+            S2N1WHkvblVFbkk2OXFsMWZScjNTcVkKLS0tIEs2WFRkL2FLVFZCZkp6YmV0R29Z
+            ME9rRWtCMzJhWnlXY0E2Q0lrQ2pkSmMKsIYncQhT7pJqEWka3L2bMbPUypDBHAJR
+            8DdTmrc7+vcFzo3U0sJGqJmdo1pw2CyXUcVfjIKntc6MjrQNwbctxA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-05T23:23:29Z"
-    mac: ENC[AES256_GCM,data:hxIxBTI4vR2uRdW4lAu9SU3ZGr0+rnywkg81S3eQS07f3cFckwv6D7nnm2UL0JrBGYSpiU1sNuqaRZT8of5gc00H85vnFbt4F4zNlHdetmwKPbFDS7LjonX+fMDboZSCDKevoLectS0cjMOeQJs9TtIwrX9o1gQiXHnahflHbhQ=,iv:7nEmK4Eqhu8+FFdfv/xTcX8vSFwDwDjfBZffBl+ZkEo=,tag:9MW+5j8ch4vb6wPOPoJuRg==,type:str]
+    lastmodified: "2023-01-08T00:52:50Z"
+    mac: ENC[AES256_GCM,data:fwEY5UOacPfFeIrIbOCNAXM92pYPDin42Nxj2uxR+nbczltdQuQdHMR0bhltjeqBNa6Yz+w4p0UCLv8pYE3lmMaJ/VNye3Q1SPqxzvLBMRizhcGyLcUEltwA0LJJxI5+CANNsC5dVd0AXlOamyUQeKUi3c7lpi7bcH8gHwtQ2X8=,iv:B8aQG0MPcBwLc/VISnEplzFklFUa9pYCFGfsbedIxnU=,tag:ZZn42M0b6h2ekiMvowyfvg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
