--- a/ansible/inventory/kube/host_vars/k3s-3.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-3.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:E+TCCoGA,iv:Qe8lBL0qOa9WaEsolXzC2JbTUvI90JwpdDAx4gza2BE=,tag:sF9WOKwPZPTjui/+1HJx4Q==,type:str]
-ansible_user: ENC[AES256_GCM,data:QbHfkaP2,iv:TJS5Yrs6K757Ip1bQ8KTrVcGBskgrfHAG4BSNM+WFrc=,tag:b8lr9a32cbvr/w3AVvkcDA==,type:str]
+kind: ENC[AES256_GCM,data:YDxxsq3m,iv:9/U7aiF7w5a+LoId0gZxQ1oCdrbL72C8TkOUaQps2bc=,tag:XDIReYvtWacnO4MaFkd7mA==,type:str]
+ansible_user: ENC[AES256_GCM,data:3uRleP1G,iv:cq6GURp87h1Y6WKXLN0jdlRbYRnELy7xZHP/jSK2w08=,tag:BjFnli07ogzHmEVg59lnfQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpVEhnb0x6ZWE5V3FsUDFa
-            UmZ4UTYvTFdLdURKU2F3STVrN1c3b3hyWENjCnV3aUVLUWw1Z205Sk9QZXhQRjVw
-            endtbjAwQXpqY21iSjlwZTZOZ2lBb00KLS0tIDZsc0RGZG84UkJRbTF5cExPbmxS
-            MitkRldqNzlFTWpuMUsvdHNCMEY1c00KJo04QstRRL7rgkUr/JUgnKz8PEpTosDg
-            zb34LBTHBq68KvcMp7yeD5b3ugARChF7KOiW/rSAOp9CA9JYOMc2ZA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjVVpRT2dwTXRVTlhzbERt
+            UlVSUFYxOXV2VDhFL050M0NzeVVEdnA0MkJZCnNHcjFzM0FXYmFNUjd2cDkvSjZv
+            Njg3QU1tb0hjTlJIU21HanRrMXBlYjAKLS0tIEw4U0tMVjFhTFQ2ZGtINGRRWnRF
+            UG95SWg2UFdmN09MVFMyUVd2Tm1UQlkKCx21C5ex+Vk7OO/HR8g18Z5SYKCl5WEB
+            Z9cy/ULSrbg4woyi9TI30iRWu99OKpluAzosahPztSfW/+2fRMnL0A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T00:52:50Z"
-    mac: ENC[AES256_GCM,data:7XflSRTB+OnUMhv2D83DFwi6iHd/BUIsi/o5/0xitB45Izw/Ke4oCGO6Jll+Sj/jipj5OO2hwwsFltmK8XnkuLFijVHfe5YiJ79lybzadDTHTwOpTIVAu1qeUkrhauEKbJ4jMHu3Br95mxbgsbsydL6WNZSa/GmCHznBGzLpSUs=,iv:CTDQV6788Yl23dEA+hXPmDVjy/9F+JAfjvOzLnbS0Rg=,tag:9jSNela80oK1F5gRA2+wnw==,type:str]
+    lastmodified: "2023-01-08T00:56:11Z"
+    mac: ENC[AES256_GCM,data://n/ueWrYUhC1/W51OxV75sAphj4Oaf1pJMKXB6Y7dFwpivPQ8ohiP5kItoDhC1LpU2UCNmdWuoZ0joDl8LRwfNAjSuMwj2Pq6ASMk6IkPQ/JLKBIMAgfSEF1Q1PFNoE+5VQqhFKybWbYh5LMtawB6sSD9fzcZ97D40r3pYbVkk=,iv:xGuLY1PqgtvQidUUZygxk2j0++HqErVdx4pHXXHEaTU=,tag:pT9gE7fsjIeexALZU988BA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
