--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:lO1LmXcBTc5/Mu002cTNkZT1cok3,iv:GhB0nAjtu7cce3vzr3APSxL4YAP6rVASKylVT66aEuk=,tag:3xVzGvzzzIbzeyjbGyEASg==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:bFjLwV7RQWKLMPdRFSDmzeQtp1f+Hh1dMafo5YKN4Xh05PfbnA==,iv:OvklnMWrQHNUqrxniG3eoYK6gkMJFSgXkHpeu4hhJ9k=,tag:mDCDT0aqrpmce20N9RvVEg==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:588zCkUxf85UO1g=,iv:10uFxWCxkpadeonJ99co9fv1P2ISbMdaCAxRF70wLKI=,tag:tusREYQNko1oq0Ttoc9Qww==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:xtN5i+zCrFPuJNZTNJ8YKptPzmOw,iv:JUaSc1e6hC1loCJNGFyesi/bq4OQ6Q+gcJJ7gZk4vL4=,tag:nAbYkJLsKQTy0vxdggE8yA==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:fSALE7oLPMxAv+H9zztPQOj+mRL7KPGkZu+ZZvK0xTyeuhvVBA==,iv:xyCC4AWo6TTG+nWpuUw0Jlp3AwsSs7xR7nG1/+08fY8=,tag:vebIiSjjWL4yDPMSh48n5g==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:9VEW0LVra77Gy4Y=,iv:ttqo5nB69kF2FrlJbeQlBoD4vIYSQKD5SVyBtIZPiCE=,tag:hvUlI3hPiJFDJhivHuzgnw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJT3NMQ3BXNjRneSs0ZUtI
-            OW5qMUVMNmhMN2o1cnIxVWZtdHM4b1Y2ZWpZCi9XS2l6emZBUDlqWlpWc0lNRzFW
-            MUZKcjUvRWVTWmQydnR4dWJaQVl1NFkKLS0tIGJyRjZRRko0YXhKck9ON25OUnd3
-            clZrN1hvRHJJNEJna2l1YS9icmRHRTgKSSyJoqTsnG0jqo+VIFvf677E9PXyokEI
-            H5ZvLTKzq9unOK4fjQBzw2nnDAU/KFO6RZ3oq3+mDaVzzCu8urH1AQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAycHUxMU5EK051M2Z1L3ZD
+            OGtyR2czNE1PQ2ZHcFlmNmpad21qYjEzRVUwCkdzS2o0T2cwZlM4eFovV21pL3dH
+            NTh5eEt1UnZIeisxY2xrb2FaRk1NclkKLS0tIGJhbHA2VEIyazZrSjFVekszcXdE
+            UG1NVXd6N21hZi9uNjJISStSWXQ5eDgKJYF6kIpYYE+Nt6mlLUVTAm/bwalca9nm
+            LC8iIBCV/NGV8o95+1szdRTYiUVkxnWX9TAygSJbkQCXfcMad9bnLg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T00:52:50Z"
-    mac: ENC[AES256_GCM,data:iiQQ9XBM26dnDMyDvBdxIIrIIvhROWPo23zDEMgesbxlO54aYRGX1uw+fnnc69d7ewlqFhpCGwe3/XHLOc16T/ahJoEtYTcyyP4bXKbCVejX+A0ZIZagoJPs6z+94PErWI/f3G5b9TNuCO1PhGAD3sKwbsznJTvOIcoTJ/sn9HM=,iv:jQpgCw8ztop3d1Gw934laZrgJcoPPzQuIxCTAFAzJB0=,tag:KJ5ZNaHIzmY59l9I35ZFFA==,type:str]
+    lastmodified: "2023-01-08T00:56:11Z"
+    mac: ENC[AES256_GCM,data:kDOepMX1nJda0aqbcGY7p6K0Y6mAhw7b/JpSi73686gBbPdf0igWBp8vra9Hc2O7ZfCWEu9tln2btzgDgH3GA2DXOjtjldlxX7GlsGWDVBM4EMH0LrDnp0SJGz7iErq6QeTzWWlA107vOCZplf8dTNrnfyF7c/A+VJR3yRx5PfU=,iv:JpqWlkPeRfPnv1KoIq6brH8LoX+Wud4nRGuvarSdHz4=,tag:UnS/TS18ujrhklCII9VE0Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
