--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,18 +4,18 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:tOtHjcryY+7G52U=,iv:0HYPIawDfZ479m5E1w1CZLabmGJLOqchlVMLJnh85CY=,tag:2q1WuqZPLTdvPvThOLR5fw==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:1zTrTfTqrJgKbwvni2AzpY/ckrMU,iv:qTpK81sbM0u7XdW0cgpUQgXSv5ioBmf7CjsKxz7uUfk=,tag:PXBf0wSYfmZjOg4Qr6+cBw==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:UlXsHg24A0gUnOt6JrIEKCxdLumdXfHJDOP+oTCxJDmVElNT7skOC6uOO7ipWj0uGI+aJIPRLBbkqqeqLCXcPNPr8tmP7Mo=,iv:4G6iiBBEE+MRJqzq4Uc/ouhVbqheZxA7zd+WO+bHd9A=,tag:G+2kyy4apHKkuxe2fUBeWw==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:Uxzh3X9443BjdQz/b3vT2h39j9zFTJEeJbc17ekRiIo6/Jc=,iv:hBxSeMORg+fMNk+FrfjlDW4GRW+BJONfy4gAb94Zn60=,tag:wCCXA2QRvM0ev/us09R+hA==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:wP5J7UXLFY76/5Gd1UcqAvIHxA==,iv:Xd9Gm7AvLKUBIIcJOQsCfSTci+4d3QA+TOD+6z6S8VE=,tag:VAEnSQKc+BOi7oWSDeKzYw==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:2bf8fCAV9LGNqQOtzd6nENX6DMLe,iv:ECnwDONiZ/A1HdFWfXIu9TXkLRe/vQtUG36ies2aU4Q=,tag:Ew3Pm4rLvwKrldgFql/Lpw==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:+9QIZQYJnqs=,iv:u+6KRE4Zwn9i8KNoI4D8o8eAt2xXOAGCE+CGF1qBkJE=,tag:fMxWrldwhdNh/UDWOcYFJw==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:i1Tle38XNVI=,iv:5ATAsIv2l8yKh2+zAg0GB1Slb39gjM80XCrkuZMJ9nc=,tag:3C014YYmfRkyjYqg16kGcA==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:e8eJoksUM0rxQFuxId8hHn/7DEIxOYOZLMzbw7pGnSG+IHHMqCoqF17pswikj5ZL/I7QIUmgc0Pnvh3LXosxGw==,iv:i6gFqACnxMCf05VDZlZfyFy8BM+diXMqvsNxO2syHt4=,tag:cCaPOUCXWBmxEg+jwbYSdg==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:fDPfWXsQBd0pPryPEixUCG5OL2fgdGWcw1m7uRpCHVfYGJRifcodFEeKx7V2Gon4TYquSpaeLZhmulynTX2TnQ==,iv:o9+4ty2BuTnd52NiZGzZrllgD41/W/qTXFDu52fHfSQ=,tag:dM6fSm1j33a8lR+aRdJtIw==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:QuUgcMG+khFW,iv:wNJ1U93aPeme4x2hm+5LbXqX3/5byWWT8czvFdRPUvw=,tag:RMC6jfa85l6vpXoJKAJM8g==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ""
+    SECRET_DOMAIN: ENC[AES256_GCM,data:HZxO2UFqHVFzCQk=,iv:fUX9jMPbdjwcrPg0DIrryNegvx77fVwn5JF2SDFf9/Y=,tag:j2EaFPOghFTIvak8gfylNg==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:0V4FD7B9jbVlMEDJhDluz3cczqXF,iv:N2jxPJmf7TUNcc7DcdPwCI9+9rJsHaBpvx/nc4WfVBI=,tag:69YwoBQj1OhCSESboqn0WQ==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:oL61cjJA7+vYp3FIbDVxzhn4FibaJ1Nm8U7F6mpsGiSyb9Im/csIPeexQUJGHNc453wBri9+t9xqEM3W9qaD825lWajfNhE=,iv:TU/uMj/55nS4qodYmnM5WmQv3QgbPPkytWKtBi0JUz8=,tag:cRr3EVxE4y3gb2cqfdmRIg==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:zUlY8/kFjzruvYD7Sq/Vj0LROKHQ1ZR4QaY+e6vsVOZPx20=,iv:Oy1TTqeWTxGePfLPJSRRhA0hoF7adouJBmIgQaGmgyY=,tag:sXK85yM2WuK/s72Q7AfxUw==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:XPJa8WVRilKtjGBdV2deAFNs+Q==,iv:smtU40NAory6Vhrwgk2NVLieIfTKqR0GPR5vaXipDXs=,tag:ZdeeWJF5dcLeeYirUjsaZA==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:HUWFhc9ovXLGV3eEIe42JYT/jlRA,iv:DXH3cQjUjzO5AEOUmT5ba3/ei8nN1XAbEQFWe+LyqZ8=,tag:CwyN5LbdLsCx4HyZpqKrJQ==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:DxkrvX4zKIo=,iv:Ch8xU7mgtaYhapOaLmLblheYii4IkNiThqQ1EOqVU2w=,tag:YQEwgBOA7qnAcO0MgzefLg==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:Ot/gFPDOeyY=,iv:h5c81f71vHaMo8uf/HhdUz9+oZ9R9MhJ5ZmJxN6v/dE=,tag:zGqC4l4Av/dbuqJQ9LNYmA==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:bzvJhANM37Id9I66GvWC1aCFSGbjzQBDmpeZ4XCTLlfW5VJPaWRssgCn/FgO7eAVSD0e2ydlJGH+A+fKkQb+Ew==,iv:9k080ClGIi4myX8XX1XhYwCvoZG3Cpcwmft6lqX6qEg=,tag:hMaSiH5hGtDfgEkhaAzd4A==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:/Zq1dilcHq5kZ5n4lmngHu4PUB6n1eNhK87daxjG8Knl+0brccMnp+49UweZD2U9jDP9+vofv/vP/aXguRC6iA==,iv:1HfmHCEhE4OdSTvn2uqJwa9F9Qx7bC6f6vxycLaikj0=,tag:WH/nxHrF2v7NlBiP2y4zHA==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:/oFICwdKA/yp,iv:lROC2NBb3orBkT2ufMEE48vhUJCkMRKlaSk1pvKriTI=,tag:3vyZ1rE0gcZtdOjkRUYrOg==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:aacrmzk6+dEOwH4MUW0t,iv:9a0F1tD2UnopRm4MymleDrLl7lDtbuplSlnMJJbrJOs=,tag:gSZ9LMQ5y1cI8muP9Sufow==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -25,14 +25,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrNE8ycXM3aGY4SHpMc0Nv
-            ZTkyYXhRSng1aWtjakYvMWtEaHFzOTNYd2tFCnBrSnJxeFNGWHF4Z0pWTEsvZFJk
-            MTdraHYvWVdaMnEzcGUyQk84Q21sODQKLS0tIERnZlFxWVZ6TVV6VkdOK1lBWE42
-            V2tDUlNoOC9xcTZhR2tyQkF1U3JLQ2cK0YF19hDJxUVB9sjrfmW9mo0RJ3uCXbFw
-            nvBx4jO5Ll01pVmGh5ZGQnsn527wsxYmPRxJEM8OTK/x8nRrAEUGYQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTREJISVFPKzZFM1lpS3lX
+            L3JMaHdHQ3NGL3hleXhmT1FTQ09TOGVuY2pvCmR6bmhMNXA1c3dJNjI1aFBkWTd2
+            N0RjQjB0NWF6d1doejZObllGYkJhT3cKLS0tIDE4MEtmbGtHUE9lMWhJejVxZkhk
+            Vmp5MWZabFdYdHovNVMxQTFGYUFMbUEKL3Gs8YYBV59cRw6oMvEOkWFBFH8f89Ce
+            JVqqgCQu/Ia0yH/85jAk3RTZquJyhHKAWjjFCctazBJJ/ffTz8xDYQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T00:52:50Z"
-    mac: ENC[AES256_GCM,data:NN03y8ew2yvMzpunFcsdELsz7mjSpuufDyNaaEuK+6P6S9aS9ccB8oMiNZaCrlRb5sYOajmIQY0R74oL8YR4mt3f3xct5WY5OpczLRiG6R0oVLBWCFfhVBmGv43aoQ6gVSJrmyV1sk4yiKZNy2vFQYJXVIqixcZbAjWSWK3/r5Y=,iv:4vAUTsbyQPHq/f5lHNo8jp5f3Lo49Mz8gCNyqiZYEtQ=,tag:RTgo++hRr2cj/IbocLNNQw==,type:str]
+    lastmodified: "2023-01-08T00:56:11Z"
+    mac: ENC[AES256_GCM,data:yh95Av0v+mTZ7SJYusDbpOZ5u3lqF+qlpHKQ/F+taOIADZ2Tb0E7BoyI7bvX4cBzUR0dZsuQi8bgaz/AR15u7MlEUq9p9ZqsWqRusH1UoRjV8lnsN0LnwNCZzppCoHl/e0gJoq7MzrXD71czc276JoTrmL+k9fVZLc+C6/Cm6bc=,iv:iu67wihxa8kl52eE0/BmzgiByz1FbzF1ae5+CKGreoM=,tag:r2Oq/g7gXtpNBNmIYOYutw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
