--- a/ansible/inventory/kube/host_vars/k3s-0.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-0.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:WefLTEN+,iv:GqoS1MlcGxU/siSSGNRJ1V+22NHQqb5OxAYPPFB9Hhs=,tag:oelqG7wpj58Mbiozc2XwOw==,type:str]
-ansible_user: ENC[AES256_GCM,data:3uKMEXGt,iv:61L3n5LtO6ZnAUNVFXGUGD3hZh8JKdZpQkhCBE2iYvo=,tag:+wehxz5zOMhz+iQ2fBb2vQ==,type:str]
+kind: ENC[AES256_GCM,data:r+dqvvwD,iv:Sb0xr9IsM+RnYkQDfdpRqqlxiyH78nheqZUP4+vDRVE=,tag:DOSw1zptfU9EZhFHucRoYA==,type:str]
+ansible_user: ENC[AES256_GCM,data:KTFzhWMu,iv:INt4/Y9atuZfxpE6sAe0n2zUwqDDxYPGojYcKJYVK74=,tag:+y4KGcDCeXefZEBaEam+qg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIaVlCd0todTREWDcvSW5W
-            UFh6L1FuMzBLdHdYeEhLdkhKZ0FGMDJTOHpVClkwTXlad2xVMC9KSjNIaVhYeFFj
-            WmFrc2k4WDN6aE9oYk9PSUxNKzhSSWMKLS0tIGpTR3JCeEV1bnlsb21DRUpvZ1Y4
-            THdBSGgwdEpFMWhtaXE3RTlCTjNOZnMKxh/KowQrEotDG3Obzn+dUe9P1mj3fCs4
-            K7mvoNHQFxnDDVddXMUVA4gzJ1NMHJfRePrwU1ikdQX2iheiRaH2Pg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3cGxmeVRQS3Q0K29RQ29X
+            ZkRFcnVFQVE3d0I0U1h3Sll5UzNXVUhwbEdBCktXUWVGRWtJbXhGLy9GWFpPNzRo
+            azJFQVZuZHNLVXl6bDBBczVQVTlwTU0KLS0tIDBZQU13WTlQamd1Z3hZSlJYdURX
+            clk2RDcxRTlFREVzcmh1a2RXOGFUTjgK1Pznnvj9fJdmbeGEZQaAKmBJar/fyhLa
+            EzvTHEV4Qs89tZBT5+64Ek5Z4kjx7ApLA/dlNgdWkjEdaNB4Unq36Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T00:52:50Z"
-    mac: ENC[AES256_GCM,data:HlpxmzXvtdlqgofYqSLAzhtGvlIxMlOfSbGtEQXMQm7t6s5qkVxpQ42nH6QCJJ06ozC8FnzCiaC6QPxlKdt7HELJFciuMwqLLoNbaKGwMdUPfoy/xLRGRJT0Fcb+MAhZedCME/mZC4QQIKbVQ3nkTcwT31cNUfK9J3Gyz8DjmYI=,iv:EjzAleW8i+PIa18+TmaYpkziFjYaScbK+BSTmgS5BkY=,tag:OU60ZOvU2RivYvOv9CpPig==,type:str]
+    lastmodified: "2023-01-08T00:56:11Z"
+    mac: ENC[AES256_GCM,data:oIY2CW8fWT0b5C+CxqBz7dUUlAXrSGIbUmc7NRfnEr7sU5r3FUYI1+c+zN3ecvyn102RFs+bmPZ6zZd/hHdtoNlYjknRmkoGxJ8lm4VsJ2S9n1NoP86SYYhb0y/cet4/zYrqlrlZitqJFeRZBCdBdaPBqiJ8hbtAODVzDPI2g/U=,iv:JhjU+pQ5LDeC4GjS1z4I2EKfyvLmRI+qn7T7G6tN/44=,tag:mVox7ZoIa44zKxoGqe6TIw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
