--- a/ansible/inventory/kube/host_vars/k3s-1.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-1.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:qFKjpjJ/,iv:OLjiEWoX+X6+dx6uHySXaaK7q11WzKKpFHB+8fnNDr4=,tag:BCQ5ae+I7uSJINc0EN2G2g==,type:str]
-ansible_user: ENC[AES256_GCM,data:jU/GFPmP,iv:W8fapa3aM7DdCT5DlYQfLFb9BgS6Xz5v7cvzikDa/BY=,tag:SIQ8p1v7bvVIaLjUk+S/+A==,type:str]
+kind: ENC[AES256_GCM,data:plAMgW6X,iv:hpktlfIekJdu1synAlGzvnIyzCn3eKA9c/fb+1eR8ec=,tag:zA7mHFCCGmCruRjjxmwMHQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:bsB01oQ0,iv:9qjdt/kv1r3biMHxLFcE8a2lZX5EBeeuOuy0/BlkJGA=,tag:Q+I05XxG0XoFUYCZhCQyLA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXRE5XUXdPTWFPMU1oK1hV
-            dS95ODk5TGhkcVBTVG9POTFCL2U3RHRxTDBnClhSZ0ExOEd1MXBrZVdpc1N3ZlBU
-            S2N1WHkvblVFbkk2OXFsMWZScjNTcVkKLS0tIEs2WFRkL2FLVFZCZkp6YmV0R29Z
-            ME9rRWtCMzJhWnlXY0E2Q0lrQ2pkSmMKsIYncQhT7pJqEWka3L2bMbPUypDBHAJR
-            8DdTmrc7+vcFzo3U0sJGqJmdo1pw2CyXUcVfjIKntc6MjrQNwbctxA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3a1lreVJ2SXpOOFdMRzg1
+            Mjl2cmZ2aGZmZ2NvMG9ld1dCWFl6YTBEOUFvCk9NTWdJclhZUFpjT1NWVithQzBP
+            bW9XQUs4NEFZSlVEc2NiY2ZLdGM1UGMKLS0tIFpiWVczUkIweFdUQi9iMTJlNnZ2
+            ZWxpNHg4aTZlUU4xaE9hU1dabnIveU0KyppR6ZJLUsb2qRzAaXwZYvXJ97XL5nSC
+            h0gjq9LyZq3SaM13dbf0C1yKp4Gio/HPdGkQC67M8lQgQgrUCj6ogg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T00:52:50Z"
-    mac: ENC[AES256_GCM,data:fwEY5UOacPfFeIrIbOCNAXM92pYPDin42Nxj2uxR+nbczltdQuQdHMR0bhltjeqBNa6Yz+w4p0UCLv8pYE3lmMaJ/VNye3Q1SPqxzvLBMRizhcGyLcUEltwA0LJJxI5+CANNsC5dVd0AXlOamyUQeKUi3c7lpi7bcH8gHwtQ2X8=,iv:B8aQG0MPcBwLc/VISnEplzFklFUa9pYCFGfsbedIxnU=,tag:ZZn42M0b6h2ekiMvowyfvg==,type:str]
+    lastmodified: "2023-01-08T00:56:11Z"
+    mac: ENC[AES256_GCM,data:tnVr7cvqd+QlkpCQ5K8KChrdgb6oMshSJsPql0wzZQ46347IxtMJMzf/5PSgOTbOHjKgd5bRV99tjaFfbzPP47F8pbH9jB07Ox+9n8+Q8ngCV+R5SWCjuTRwRFd9/rB0DkN2nujVyaTEFW25dGCL6HGZg9kDMvwKRzGE3aavzt4=,iv:pJ5muEk1MbY7bi//DnK2/AbwZx5PIyltl/bSqysphlE=,tag:iQ4q8oyPer39raXRqUx5zg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
