--- a/ansible/inventory/kube/host_vars/k3s-2.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-2.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:DAgDnW3S,iv:ipERh51CS3z/JejV2YBFzWcBkXTCPoob6Ih0+q8sD9E=,tag:AcVH9kZezJ5udCI3/qibvQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:eurhyLZL,iv:LT5K5ZtPT/2QzItMWeb2e3gNA02p0uveUqV0xzp8N3c=,tag:B6Xdw5Id1tLJfqcpsvIGmA==,type:str]
+kind: ENC[AES256_GCM,data:MItuHY1K,iv:VrgE6ca8DquhnnfpcSV7xPAp8KJFba9DpZhrvrrqNB4=,tag:saTlbDZPILCSr7dKEFH3Ag==,type:str]
+ansible_user: ENC[AES256_GCM,data:6+IdIPPX,iv:FqwphyjGdEKhOyV3E91WIJ0RGE0+INv99x8dwlEGMTo=,tag:sHO689MseXqgSzyfgUOYnA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzd1lpcUZGZkRWUUZWY284
-            aHBHdkxTc0hzVGtZMkg3L1hRZm9YR0grWFZRClgzSnhqUDFqR0JTNFBaakF1OG91
-            KzJ5VWdJWmxkbkJLUVdqS2xiQlUxMUUKLS0tIEIrcDZlai9VWGtzaDRDQVpBeXRU
-            UGQyd3VIcmNWODhQTTBQWEZQaXZLKzQKUpMgfODQ6USYXeFj9Zlj29AIpqpSmQss
-            mGccD5M5q6S3HPhHvdW2X/hr73ElnbDFBb/fY2WGtptvKXXjfaXijQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxWVpEZHdvaFl2WFlyaFVB
+            Z1RRQkhCcm9VTVE2SWxuZzFOeStsSTNPWUhnCjBxYzVkZVByQThXaXdOREdlOUdY
+            WmFBVmpSamtPVXZPQTFrQlZaYmxGTkEKLS0tIG9YV1AvVmxxaUtIZHBmbEpacXBa
+            d05qdzRMUklORVYvUkthbS81eHpxWEUKYFk06vVw2NI72TIEc48qvsgtfcCiAXwQ
+            Mz/YMHHmhU1KhRvVMDgJkLwCwxpL/oaCS+hdtFK4XTNNETIpDwgNGQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T00:52:50Z"
-    mac: ENC[AES256_GCM,data:DEx4dkYHgsp7whhSEG01DFl1fDoFHl4T1+yAhswVBU8MT9EAt6ZVtgBvO3PTtQQY9/bAPLS+2lyARUWmDUA8E1EcS2t/MSQAKJmN6O4mxzEjg2zja8hUUNOAI7QHbVd2mvxgPPIUm66sii/LMINQ7Dj5xvBvLibhZ0WFJ1wOqwU=,iv:/7QdCYzfBTNsJcyuah2zlEy0o06/hPudT5X1/+4OoHY=,tag:S8heFlTkJpXRU3MGV/wanw==,type:str]
+    lastmodified: "2023-01-08T00:56:11Z"
+    mac: ENC[AES256_GCM,data:J91RhecF0JWk1+oUtPSBdmK+elmA0ExvvJbxjRNxBIl41EcI5jGJgV3Bo55nD68yB4c8xbPGflJ8S+lf2tPzSuP3reWpbXsvfAxrU+zdSXIS2p39sYz4MBsg5p3Na91SvcGBmwdljZxSpJOQAEv3oq56ZbzXyjdJObGJEYVYEvg=,iv:noCFjWl7VCZsb1UFNLejdtomo6UBdlTSFr+uNFtZVEo=,tag:BdwTJAaFKHn3mN8nccc4Lw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
