--- a/ansible/inventory/kube/host_vars/k3s-4.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-4.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:0yCmvfKC,iv:T3pXRWGRYV/OCGqevVjrv+B+dX63msSrCxPN2djqgCU=,tag:mhQ1IsU1hcsT89tNKZv1FQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:5eYVsdJv,iv:onTpRQMf498l8NBtkUQJQUbyC4kO4XSnLJ+wNMRo2kw=,tag:m1q3O1CZNAcH/mOwqcg8XQ==,type:str]
+kind: ENC[AES256_GCM,data:Pm+Saab5,iv:GkTIDk7FbU5Gh9tLWNm7geKSMEWI+Ej3SpThl4Yq70Q=,tag:L7a0HSINbD9/BtfMsqg4MA==,type:str]
+ansible_user: ENC[AES256_GCM,data:R7iZrd8T,iv:ihYjEoIwQpdkhEdYOEpPMtc/c8OSnOhbBTEOOHqb/qk=,tag:+zNnAQRI+rJiXBhLobyHiA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRUHZqNWpac0RsTUtRNjQv
-            ZWR5YlVIZzBCOG9sditQcUh6Tmx5V2dmZFNVCnYvZ0htd3NmTXE5dHhKS0JKMzBh
-            UUl5WU43Ryt2em9ETlZGeFZjVXhXZzQKLS0tIE1DVGFlVDltVUx2T1gxbEVWZ3dR
-            K3BoZnIzQ2E3RG93S09kMHozRjMrVFUKrLY35fb+Bf2Pt4WPblnb6e9hyoFNMuLH
-            r2cHYlwW5IxqJyWbTknsPBOrqDsfYaBriUILizbK15fmJeVF9x3jTg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLdnpCUkIycHZMd1FVdTlk
+            N1FzSDM0bEFjMjdBOUpVNUN6S0h5UTdjUFY4CkM0NkNyakV4WWt1WXdQUDllRTNl
+            ZHRLckpsc0xLczdITHBjWDdYU3YrT0UKLS0tIHAwdGpTOFRrS0cxUEN5cGNjODUy
+            YjA1WURRZEV3c1cvMEZYVm80aUFyQm8KK5TCK7yGpiOvIlZ4RFCnQlNBiffY3Chx
+            Iak9yXXEsY1ilRTxOlzQ3Jscl/xZ2x4f2W8wNYF+Im13Lvsb8MQL6g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T00:52:50Z"
-    mac: ENC[AES256_GCM,data:rMxAxLBiR60HmKu9b+ZOqVPLEabwUZNo6ubFD6Kt23Vrz0Y/woMmsAhHbN5GY//HnZfULgYchMSeAAE7hQvezkGaIDWF4bd8maovQg/kyIwhOnEhdtkSehXbeDq6tpR+idJ2zcD6O0tb9YSy5q1WnZRQIss4kYA0QPs/XtUQOgQ=,iv:swaJjMZieYSWdBwvxsGrodhqnDIhhZSd4PI0/hjXF9c=,tag:VK/b0Hp918jJS+abH4GJEw==,type:str]
+    lastmodified: "2023-01-08T00:56:11Z"
+    mac: ENC[AES256_GCM,data:cVX7JQ1XQNCApB7Cs5wx2XXkTSwe3qirUwrKrSW2l86e4JNjle0In1khjOPxUQPpNfI4jl06RDjzrWEI3z4gX8MOR8e2khn+0Fx6+cpv3fgLhHLyTstMiiu1JcvXjjQwgjodg/EymEI4B0ikUlCds47DzsDg8/RsyKMj8c0VF/k=,iv:RNnkL/4bLAr/hDav8husODhxH/wFw9mBIAGtkBEksqU=,tag:0SGmCoKUCLtE7JKqM2Spdg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
