--- a/kubernetes/apps/networking/authelia/helm-release.yaml
+++ b/kubernetes/apps/networking/authelia/helm-release.yaml
@@ -2,8 +2,8 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: &app authelia
-  namespace: default
+  name: authelia
+  namespace: networking
 spec:
   interval: 15m
   chart:
