--- a/kubernetes/apps/networking/lldap/ks.yaml
+++ b/kubernetes/apps/networking/lldap/ks.yaml
@@ -7,7 +7,7 @@ spec:
   path: ./cluster/apps/networking/lldap/app
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: home-kubernetes
   interval: 30m
   prune: true
   wait: true
