--- a/kubernetes/apps/networking/lldap/ks.yaml
+++ b/kubernetes/apps/networking/lldap/ks.yaml
@@ -1,8 +1,10 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: networking-lldap
+  name: lldap
   namespace: flux-system
+  labels:
+    substitution.flux.home.arpa/enabled: "true"
 spec:
   path: ./kubernetes/apps/networking/lldap/app
   sourceRef:
