--- a/kubernetes/apps/networking/lldap/app/helm-release.yaml
+++ b/kubernetes/apps/networking/lldap/app/helm-release.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: cluster-apps-lldap-app
+  name: lldap
   namespace: networking
 spec:
   interval: 15m
