--- a/kubernetes/apps/networking/lldap/app/helm-release.yaml
+++ b/kubernetes/apps/networking/lldap/app/helm-release.yaml
@@ -28,9 +28,9 @@ spec:
       tag: latest
     env:
       TZ: "${TIMEZONE}"
-      LLDAP_LDAP_BASE_DN: "{SECRET_LLDAP_LDAP_BASE_DN}"
-      LLDAP_LDAP_USER_PASS: "{SECRET_LLDAP_LDAP_USER_PASS}"
-      LLDAP_JWT_SECRET: "{SECRET_LLDAP_JWT}"
+      LLDAP_LDAP_BASE_DN: "${SECRET_LLDAP_LDAP_BASE_DN}"
+      LLDAP_LDAP_USER_PASS: "${SECRET_LLDAP_LDAP_USER_PASS}"
+      LLDAP_JWT_SECRET: "${SECRET_LLDAP_JWT}"
       # UID: "${SECURITY_CONTEXT_RUN_AS_USER}"
       # GID: "${SECURITY_CONTEXT_RUN_AS_GROUP}"
     service:
