--- a/kubernetes/apps/networking/lldap/app/helm-release.yaml
+++ b/kubernetes/apps/networking/lldap/app/helm-release.yaml
@@ -3,6 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: lldap
+  namespace: networking
 spec:
   interval: 15m
   chart:
