--- a/kubernetes/apps/default/filebrowser/app/helm-release.yaml
+++ b/kubernetes/apps/default/filebrowser/app/helm-release.yaml
@@ -57,4 +57,4 @@ spec:
       data:
         enabled: true
         existingClaim: pvc-default
-        mountPath: /data/filebrowser
+        #mountPath: /data/filebrowser
