--- a/kubernetes/apps/networking/traefik/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/traefik/app/helmrelease.yaml
@@ -144,10 +144,10 @@ spec:
     additionalVolumeMounts:
       - name: pvc-networking
         mountPath: /storage
-  volumes:
-    - name: pvc-networking
-      persistentVolumeClaim:
-        claimName: pvc-networking
+  # volumes:
+  #   - name: pvc-networking
+  #     persistentVolumeClaim:
+  #       claimName: pvc-networking
   # tlsStore:
     #   default:
     #     defaultCertificate:
